# app/Http/Controllers/AdminUserController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\Admin\CreateAdminRequest;
+use App\Http\Requests\Admin\UpdateUserRequest;
 use App\Services\AdminService;
 use Illuminate\Http\JsonResponse;
 
@@ -87,7 +88,7 @@ class AdminUserController extends Controller
      *             mediaType="application/x-www-form-urlencoded",
      *            @OA\Schema(
      *                 type="object",
-     *                @OA\Property(property="first_name",description="User firstname Email",type="string"),
+     *                @OA\Property(property="first_name",description="User firstname",type="string"),
      *                 @OA\Property(property="last_name",description="User lastname",type="string"),
      *                 @OA\Property(property="email",description="User Email",type="string"),
      *                 @OA\Property(property="password",description="User password",type="string"),
@@ -112,6 +113,51 @@ class AdminUserController extends Controller
     public function store(CreateAdminRequest $request): JsonResponse
     {
         $data = $this->adminService->createAdmin($request->validated());
+
+        return successResponse($data);
+    }
+
+
+    /**
+     * @OA\PUT(
+     *     path="/api/v1/admin/user-edit/{uuid}",
+     *     tags={"Admin Api Endpoints"},
+     *     summary="Edit a User Account",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\Parameter(name="uuid",in="path",required=true,
+     *         @OA\Schema(type="string"),
+     *         style="form"),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *            @OA\Schema(
+     *                 type="object",
+     *                @OA\Property(property="first_name",description="User firstname",type="string"),
+     *                 @OA\Property(property="last_name",description="User lastname",type="string"),
+     *                 @OA\Property(property="email",description="User Email",type="string"),
+     *                 @OA\Property(property="password",description="User password",type="string"),
+     *                 @OA\Property(property="password_confirmation",description="User password",type="string"),
+     *                 @OA\Property(property="avatar",description="Avatar image UUID",type="string"),
+     *                 @OA\Property(property="address",description="User main address",type="string"),
+     *                 @OA\Property(property="phone_number",description="User main  phone number",type="string"),
+     *                 @OA\Property(property="is_marketing",description="User marketing preferences",type="string"),
+     *                 required={"first_name", "last_name","email","password","password_confirmation","avatar","address","phone_number"}
+     *             )
+     *         ),
+     *     ),
+     *     @OA\Response(response=200,description="OK"),
+     *     @OA\Response(response=401,description="Unauthorized"),
+     *     @OA\Response(response=404,description="Page not found"),
+     *     @OA\Response(response=422,description="Unprocessable Entity"),
+     *     @OA\Response(response=500,description="Internal server error")
+     *
+     * )
+     */
+
+    public function update(UpdateUserRequest $request,string $uuid): JsonResponse
+    {
+        $data = $this->adminService->updateUser($uuid,$request->validated());
 
         return successResponse($data);
     }
